--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,13 +16,13 @@
             <div data-u="slides"
                  style="cursor:default;position:relative;top:0px;left:0px;width:1300px;height:500px;overflow:hidden;">
                 <div>
-                    <img data-u="image" th:src="@{/images/responsive.png}"/>
+                    <img data-u="image" th:src="@{/images/home1.jpg}"/>
                 </div>
                 <div>
-                    <img data-u="image" th:src="@{/images/post.jpg}"/>
+                    <img data-u="image" th:src="@{/images/home1.jpg}"/>
                 </div>
                 <div>
-                    <img data-u="image" th:src="@{/images/bg1.jpg}"/>
+                    <img data-u="image" th:src="@{/images/home1.jpg}"/>
                 </div>
             </div>
             <!-- Arrow Navigator -->
