--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -12,16 +12,15 @@
         </div>
         <div class="post" v-for="post in posts">
             <div class="post_media">
-                <img th:src="@{/images/post.jpg}" />
+                <img th:src="@{/images/post.jpg}"/>
             </div>
             <div class="post_content">
                 <div class="post_title">
                     <a class="post_title_link"
                        :href="'/posts/'+post.id"> {{ post.title }}</a>
-                    <form method="post" sec:authorize="hasAuthority('Administrateur')">
-                        <button v-on:click="deletePost(post.id)" type="submit" class="btn btn-danger"><i
-                                class="fa fa-trash"></i></button>
-                    </form>
+                    <button sec:authorize="hasAuthority('Administrateur')" v-on:click="deletePost(post.id)"
+                            type="submit" class="btn btn-danger"><i
+                            class="fa fa-trash"></i></button>
                     <a sec:authorize="hasAuthority('Administrateur')" class="btn btn-success"
                        :href="'/posts/'+post.id+'/edit'"><i class="fa fa-edit"></i> </a>
                 </div>
