--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -30,7 +30,7 @@
                 </ul>
             </div>
             <div class="post_actions">
-                <button id="'fbShare'+post.id" class="btn btn-primary">Publier sur facebook</button>
+                <button v-on:click="fbShare" class="btn btn-primary">Publier sur facebook</button>
             </div>
         </div>
     </div>
