--- a/src/main/resources/assets/sass/_variables.scss
+++ b/src/main/resources/assets/sass/_variables.scss
@@ -1,9 +1,9 @@
-$primary-color:#47B0ED;
-$secondary-color:#E74C3C;
-$third-color:#2980B9;
-$black-color:#2C3E50;
-$body-bg:#EEEEEE;
-
+$primary-color: #47B0ED;
+$secondary-color: #E74C3C;
+$third-color: #2980B9;
+//$black-color:#2C3E50;
+$black-color: #2B2B2B;
+$body-bg: #EEEEEE;
 
 // Borders
 $laravel-border-color: darken($body-bg, 10%);
