--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -41,7 +41,7 @@
                 </ul>
             </div>
             <div class="post_actions">
-                <button :id="'fbShare'+post.id" class="btn btn-primary">Publier sur facebook</button>
+                <button :id="'fbShare'+post.id" class="btn btn-fb"><i class="fa fa-facebook"></i> Publier sur facebook</button>
             </div>
         </div>
     </div>
