--- a/src/main/resources/assets/sass/_navbar.scss
+++ b/src/main/resources/assets/sass/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar-static-top {
   margin: 0;
-  background-color: white !important;
+  background-color: $black-color !important;
   box-shadow: none;
   .navbar-header {
     margin-right: 50px;
@@ -10,10 +10,11 @@
     margin-top: 50px;
     .form-group {
       .input-group {
+        margin-right: 15px;
         input.form-control {
-          background-color: $black-color;
+          background-color: lighten($black-color,5%);
           border: none;
-          box-shadow: none;
+          box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.5), 0px 1px 0px rgba(255, 255, 255, 0.2);
           width: 300px;
           color: white;
         }
@@ -43,27 +44,26 @@
   }
 }
 
-.navbar {
-  background-color: $black-color;
+.navbar.navbar-bottom {
+  background-color: white;
   border-radius: 0;
-  box-shadow: none;
+  box-shadow: -1px 5px 10px 0px rgba(221, 221, 221, 1);
   border: none;
   .navbar-collapse {
     .navbar-nav {
       li {
         a, a:active, a:focus {
-          color: white;
+          color: $black-color;
         }
         a:hover {
-          background-color: lighten($black-color, 5%);
+          color: $primary-color;
         }
       }
       li.active {
         border-bottom: 4px solid $primary-color;
-        margin-top: -4px;
         a, a:active, a:focus, a:hover {
-          background-color: lighten($black-color, 5%);
-          color: white;
+          background-color: transparent !important;
+          color: $black-color !important;
         }
       }
       li.open {
