--- a/src/main/resources/assets/sass/_post.scss
+++ b/src/main/resources/assets/sass/_post.scss
@@ -8,7 +8,7 @@
   width: 100%;
   padding: 15px 15px;
   margin-bottom: 15px;
-  border-bottom: 4px solid $primary-color;
+  border-bottom: 1px solid #dddddd;
   background-color: white;
   &_content {
     flex: 1;
@@ -27,6 +27,7 @@
     display: flex;
     &_link {
       flex: 1;
+      color: $black-color;
     }
     .btn {
       margin-left: 10px;
@@ -35,7 +36,7 @@
   &_information {
     display: flex;
     &_user {
-
+      color: $primary-color;
     }
   }
   &_actions {
@@ -95,7 +96,7 @@
       flex-basis: 100%;
       font-size: 1em;
     }
-    .post_information{
+    .post_information {
       color: #8B8B8B;
     }
   }
