--- a/src/main/resources/templates/layout/fragments/navbar.html
+++ b/src/main/resources/templates/layout/fragments/navbar.html
@@ -8,7 +8,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#"><img th:src="@{/images/logo.png}"/></a>
+        <a class="navbar-brand" href="#"><img th:src="@{/images/logo-light.png}"/></a>
     </div>
     <div class="navbar-collapse collapse">
         <form id="documentsSearch" class="navbar-form navbar-right">
@@ -31,7 +31,7 @@
         </form>
     </div>
 </nav>
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default navbar-bottom">
     <div class="container">
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
