--- a/src/main/resources/assets/sass/_navbar.scss
+++ b/src/main/resources/assets/sass/_navbar.scss
@@ -74,7 +74,7 @@
       }
       li.dropdown {
         a.dropdown-toggle {
-          color: white;
+          color: $black-color;
         }
         .dropdown-menu {
           padding: 0;
