--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -15,7 +15,7 @@
                 </div>
                 <ul class="post_information">
                     <li class="post_information_user"> {{ post.user.name }} |</li>
-                    <li class="post_information_date">{{ post.created_at }}</li>
+                    <li class="post_information_date">{{ post.updated_at }}</li>
                 </ul>
                 <div class="post_description">
                     {{ post.description }}
@@ -34,8 +34,12 @@
             </div>
         </div>
     </div>
+    <aside class="col-md-3" th:replace="posts/fragments/sidebar :: sidebar">
+
+    </aside>
 </main>
 <th:block layout:fragment="script">
     <script type='text/javascript' th:src="@{/js/showPost.js}"></script>
+    <script type='text/javascript' th:src="@{/js/sidebar.js}"></script>
 </th:block>
 </html>
