--- a/src/main/resources/assets/sass/_navbar.scss
+++ b/src/main/resources/assets/sass/_navbar.scss
@@ -73,7 +73,7 @@
         }
       }
       li.dropdown {
-        a.dropdown-toggle {
+        a.dropdown-toggle,a.dropdown-toggle:active, a.dropdown-toggle:focus {
           color: $black-color;
         }
         .dropdown-menu {
