--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -37,8 +37,12 @@
             </div>
         </div>
     </div>
+    <aside class="col-md-3" th:replace="posts/fragments/sidebar :: sidebar">
+
+    </aside>
 </main>
 <th:block layout:fragment="script">
     <script type='text/javascript' th:src="@{/js/storePost.js}"></script>
+    <script type='text/javascript' th:src="@{/js/sidebar.js}"></script>
 </th:block>
 </html>
