--- a/src/main/resources/assets/sass/_variables.scss
+++ b/src/main/resources/assets/sass/_variables.scss
@@ -5,6 +5,9 @@ $third-color: #2980B9;
 $black-color: #2B2B2B;
 $body-bg: #EEEEEE;
 
+$red: #D13030;
+$green: #6ABE59;
+
 // Borders
 $laravel-border-color: darken($body-bg, 10%);
 $list-group-border: $laravel-border-color;
