--- a/src/main/resources/assets/sass/app.scss
+++ b/src/main/resources/assets/sass/app.scss
@@ -2,6 +2,7 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);
 // Variables
 @import "variables";
+
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 @import "navbar";
@@ -668,4 +669,5 @@ ul.contact-get-in-touch {
 
 @import "post";
 @import "form";
+@import "admin";
 
