--- a/src/main/resources/assets/sass/_navbar.scss
+++ b/src/main/resources/assets/sass/_navbar.scss
@@ -44,7 +44,7 @@
   }
 }
 
-.navbar.navbar-bottom {
+.navbar.navbar-bottom.navbar-bottom-light {
   background-color: white;
   border-radius: 0;
   box-shadow: -1px 5px 10px 0px rgba(221, 221, 221, 1);
@@ -54,6 +54,10 @@
       li {
         a, a:active, a:focus {
           color: $black-color;
+          i {
+            color: $primary-color;
+            margin-right: 5px;
+          }
         }
         a:hover {
           color: $primary-color;
@@ -105,7 +109,109 @@
   }
 }
 
+.navbar.navbar-bottom.navbar-bottom-black {
+  background-color: $black-color;
+  border-radius: 0;
+  box-shadow: -1px 5px 10px 0px rgba(221, 221, 221, 1);
+  border: none;
+  .navbar-collapse {
+    .navbar-nav {
+      li {
+        a, a:active, a:focus {
+          color: white;
+          i {
+            color: $primary-color;
+            margin-right: 5px;
+          }
+        }
+        a:hover {
+          color: $primary-color;
+        }
+      }
+      li.active {
+        border-bottom: 4px solid $primary-color;
+        a, a:active, a:focus, a:hover {
+          background-color: transparent !important;
+          color: white !important;
+        }
+      }
+      li.open {
+        a.dropdown-toggle, a:active.dropdown-toggle, a:focus.dropdown-toggle, a:hover.dropdown-toggle {
+          color: white;
+          background-color: transparent;
+        }
+      }
+      li.dropdown {
+        a.dropdown-toggle, a.dropdown-toggle:active, a.dropdown-toggle:focus {
+          color: white;
+        }
+        .dropdown-menu {
+          padding: 0;
+          border: none;
+          li {
+            margin: 0;
+            a {
+              color: $black-color;
+              padding: 8px 25px;
+              border-bottom: 1px solid lighten(#dddddd, 5%);
+            }
+            a:hover {
+              color: $primary-color;
+              background-color: transparent;
+            }
+          }
+          li.active {
+            border-bottom: none !important;
+            a, a:active, a:focus, a:hover {
+              background-color: transparent;
+              color: $primary-color;
+            }
+          }
+        }
+
+      }
+    }
+  }
+}
+
 .navbar-fixed-top {
   width: 90%;
   margin-left: 5%;
+}
+
+@media (max-width: 1274px) {
+  .navbar-header {
+    float: none;
+  }
+  .navbar-left, .navbar-right {
+    float: none !important;
+  }
+  .navbar-toggle {
+    display: block;
+  }
+  .navbar-collapse {
+    border-top: 1px solid transparent;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
+  }
+  .navbar-fixed-top {
+    top: 0;
+    border-width: 0 0 1px;
+  }
+  .navbar-collapse.collapse {
+    display: none !important;
+  }
+  .navbar-nav {
+    float: none !important;
+    margin-top: 7.5px;
+  }
+  .navbar-nav > li {
+    float: none;
+  }
+  .navbar-nav > li > a {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  .collapse.in {
+    display: block !important;
+  }
 }
