--- a/src/main/resources/templates/admin/dashboard.html
+++ b/src/main/resources/templates/admin/dashboard.html
@@ -30,6 +30,122 @@
                 </div>
             </div>
         </div>
+        <div id="users" class="row">
+            <div class="col-sm-12">
+                <div class="panel panel-primary">
+                    <div class="panel-heading">
+                        <div class="panel-title"> Gestion des utilisateurs</div>
+                    </div>
+                    <div class="panel-body">
+                        <table class="table">
+                            <thead>
+                            <tr>
+                                <td>Nom</td>
+                                <td>E-mail</td>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr v-for="user in users">
+                                <td v-text="user.name"></td>
+                                <td v-text="user.email"></td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="messages" class="row">
+            <div class="col-sm-12">
+                <div class="panel panel-primary">
+                    <div class="panel-heading">
+                        <div class="panel-title"> Gestion des contacts</div>
+                    </div>
+                    <div class="panel-body">
+                        <div class="tabs-left">
+                            <ul class="nav nav-tabs">
+                                <li v-for="message in messages">
+                                    <a data-toggle="tab" :href="'#'+message.id">
+                                        <span class="message-name">{{ message.from_name }}</span>
+                                        <span class="message-email">
+                                            <i class="fa fa-envelope"></i> {{ message.from_email }}
+                                        </span>
+                                    </a>
+                                </li>
+                            </ul>
+
+                            <div class="tab-content">
+                                <div v-for="message in messages" :id="message.id" class="tab-pane fade in">
+                                    <p>{{ message.content }}</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row" id="statisticsdb">
+            <div class="col-sm-12">
+                <div class="panel panel-primary">
+                    <div class="panel-heading">
+                        <div class="panel-title"> Gestion des données</div>
+                    </div>
+                    <div class="panel-body">
+                        <button class="btn btn-primary" v-on:click="addNewStatistic = true">Ajouter</button>
+                    </div>
+                    <table class="table">
+                        <thead>
+                        <tr>
+                            <td>nom de la nappe</td>
+                            <td>date</td>
+                            <td>indicateur</td>
+                            <td>valeur</td>
+                            <td>actions</td>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr v-if="addNewStatistic">
+                            <td>
+                                <input v-model="form.model.nappe" type="text" class="form-control"/>
+                                <span class="help-block"><strong v-text="form.errors.get('nappe')"></strong> </span>
+                            </td>
+                            <td>
+                                <input v-model="form.model.date" type="text" class="form-control"/>
+                                <span class="help-block"><strong v-text="form.errors.get('date')"></strong> </span>
+                            </td>
+                            <td>
+                                <input v-model="form.model.type" type="text" class="form-control"/>
+                                <span class="help-block"><strong v-text="form.errors.get('type')"></strong> </span>
+                            </td>
+                            <td>
+                                <input v-model="form.model.valeur" type="text" class="form-control"/>
+                                <span class="help-block"><strong v-text="form.errors.get('valeur')"></strong> </span>
+                            </td>
+                            <td>
+                                <button class="btn btn-success" v-on:click="saveNewStatistic"><i class="fa fa-save"></i>
+                                </button>
+                            </td>
+                        </tr>
+                        <tr v-for="statistic in statistics">
+                            <td v-text="statistic.nappe"></td>
+                            <td v-text="statistic.date"></td>
+                            <td v-text="statistic.type"></td>
+                            <td v-text="statistic.valeur"></td>
+                            <td>
+                                <button v-on:click="deleteStatistic(statistic.id)" class="btn btn-danger"><i
+                                        class="fa fa-trash"></i></button>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
     </div>
 </main>
+<th:block layout:fragment="script">
+    <script type='text/javascript' th:src="@{/js/users.js}"></script>
+    <script type='text/javascript' th:src="@{/js/messages.js}"></script>
+    <script type='text/javascript' th:src="@{/js/statisticsdb.js}"></script>
+</th:block>
 </html>
