--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
             <!-- Loading Screen -->
             <div data-u="loading" style="position:absolute;top:0px;left:0px;background-color:rgba(0,0,0,0.7);">
                 <div style="filter: alpha(opacity=70); opacity: 0.7; position: absolute; display: block; top: 0px; left: 0px; width: 100%; height: 100%;"></div>
-                <div style="position:absolute;display:block;background:url('images/bg1.jpg') no-repeat center center;top:0px;left:0px;width:100%;height:100%;"></div>
+                <div style="position:absolute;display:block;background:url('images/home1.jpg') no-repeat center center;top:0px;left:0px;width:100%;height:100%;"></div>
             </div>
             <div data-u="slides"
                  style="cursor:default;position:relative;top:0px;left:0px;width:1300px;height:500px;overflow:hidden;">
