--- a/src/main/resources/assets/sass/_map.scss
+++ b/src/main/resources/assets/sass/_map.scss
@@ -13,9 +13,15 @@
     font-family: 'Titillium Web', sans-serif;
     margin-top: 50px;
     margin-bottom: 15px;
+    padding: 15px 30px;
     font-size: 1em;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
     h2 {
+      flex-basis: 100%;
       color: #777777;
+      margin-bottom: 30px;
     }
   }
   .infosPopup-bottom {
