--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -31,7 +31,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <button class="btn btn-primary">Create</button>
+                        <button class="btn btn-primary">Publier</button>
                     </div>
                 </form>
             </div>
