--- a/src/main/resources/templates/admin/fragments/layers.html
+++ b/src/main/resources/templates/admin/fragments/layers.html
@@ -2,12 +2,13 @@
     <div class="panel panel-primary">
         <div class="panel-heading">
             <div class="panel-title"><a href="">Gestion des
-                couches</a></div>
+                couches</a>
+                <button type="button" class="btn btn-sm btn-default pull-right" data-toggle="modal"
+                        data-target="#addLayer"><i class="fa fa-plus"></i>
+                </button>
+            </div>
         </div>
         <div class="panel-body">
-            <button type="button" class="btn btn-sm btn-primary" data-toggle="modal"
-                    data-target="#addLayer"><i class="fa fa-plus"></i>Ajouter une couche
-            </button>
             <table class="table">
                 <thead>
                 <tr>
