--- a/src/main/resources/templates/admin/fragments/users.html
+++ b/src/main/resources/templates/admin/fragments/users.html
@@ -2,12 +2,13 @@
     <div class="panel panel-primary">
         <div class="panel-heading">
             <div class="panel-title"><a href="">Gestion des
-                utilisateurs</a></div>
+                utilisateurs</a>
+                <button id="addUser" type="button" class="btn btn-default pull-right btn-sm" data-toggle="modal"
+                        data-target="#user"><i class="fa fa-plus"></i>
+                </button>
+            </div>
         </div>
         <div class="panel-body">
-            <button id="addUser" type="button" class="btn btn-primary btn-sm" data-toggle="modal"
-                    data-target="#user"><i class="fa fa-plus"></i> Ajouter un utilisateur
-            </button>
             <div id="user" class="modal fade" role="dialog">
                 <div class="modal-dialog">
                     <!-- Modal content-->
