--- a/src/main/resources/templates/posts/fragments/sidebar.html
+++ b/src/main/resources/templates/posts/fragments/sidebar.html
@@ -1,7 +1,7 @@
 <aside th:fragment="sidebar">
     <div class="col-sm-3 blog-sidebar" id="sidebar">
         <div class="sidebar-module sidebar-module-inset">
-            <div class="panel panel-primary">
+            <div class="panel panel-sidebar">
                 <div class="panel-heading">
                     <div class="panel-title">Les derniers</div>
                 </div>
