--- a/src/main/resources/assets/sass/app.scss
+++ b/src/main/resources/assets/sass/app.scss
@@ -11,43 +11,36 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  background-color: white;
+  background-color: #F5F5F5;
   font-family: 'Titillium Web', sans-serif;
   position: relative;
 }
 
 .panel-primary {
-  border: none !important;
+  border: 1px solid #DDDDDD !important;
   .panel-heading {
-    background-color: #F2F2F2;
-    padding: 0 !important;
-    border: none;
-    display: flex;
-    .panel-title {
-      background-color: $primary-color;
-      padding: 10px;
-    }
+    color: #4B4B4B !important;
+    background-color: #F8F8F8 !important;
+    border-bottom: 1px solid #DDDDDD;
   }
   .panel-body {
-    border: none !important;
+
   }
 }
 
 .panel {
   border-radius: 0;
-  border: none !important;
   box-shadow: none;
   .panel-heading {
     border-radius: 0;
-  }
-  .panel-body {
-    border: none !important;
   }
 }
 
 #page {
   width: 90%;
   margin-left: 5%;
+  background-color: white;
+  border: 1px solid #dddddd;
 }
 
 a {
