--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -41,6 +41,9 @@
                 <button id="btnArea" class="btn btn-default">
                     <i class="fa fa-pencil"></i>
                 </button>
+                <button id="btnEdit" class="btn btn-default">
+                    <i class="fa fa-edit"></i>
+                </button>
                 <button id="btnDelete" class="btn btn-default">
                     <i class="fa fa-trash"></i>
                 </button>
