--- a/src/main/resources/assets/sass/_map.scss
+++ b/src/main/resources/assets/sass/_map.scss
@@ -5,7 +5,7 @@
   margin-top: -22px;
   display: flex;
   flex-wrap: wrap;
-  .map{
+  .map {
     flex-basis: 100%;
   }
   .legend {
@@ -166,7 +166,8 @@
     border-radius: 0 !important;
   }
 }
-#showConfig{
+
+#showConfig {
   position: absolute;
   right: -50px;
   top: 0;
@@ -174,12 +175,14 @@
   height: 50px;
   background-color: $black-color;
 }
-#showConfig:active,#showConfig:focus,#showConfig:hover{
+
+#showConfig:active, #showConfig:focus, #showConfig:hover {
   border: none;
   color: $primary-color;
   box-shadow: none;
   outline: none;
 }
+
 .map-params {
   margin-top: 5px;
   background-color: $primary-color;
@@ -189,7 +192,7 @@
   top: 10px;
   left: 0px;
   display: flex;
-  .map-config{
+  .map-config {
     display: flex;
     padding: 8px 10px;
   }
@@ -205,16 +208,16 @@
     margin-right: 5px;
     margin-left: 5px;
   }
-  #btnSelect,  #btnArea,  #btnDelete {
+  #btnSelect, #btnArea, #btnDelete, #btnEdit {
     margin-top: -1px;
     margin-right: 5px;
     margin-left: 5px;
-    background: darken($primary-color,5%);
+    background: darken($primary-color, 5%);
     border: none;
     box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.5), 0px 1px 0px rgba(255, 255, 255, 0.2);
     color: white;
   }
-  #btnSelect.active,  #btnArea.active,  #btnDelete.active {
+  #btnSelect.active, #btnArea.active, #btnDelete.active, #btnEdit.active {
     background: $black-color;
     color: white;
   }
